# mountainweather

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: catalogue.yml  ci.yml  extract.yml  forecast.yml  train.yml
configs/: hub.yaml  model.yaml  predictors.yaml  region.yaml  variables.yaml
scripts/: build_training_table.py  gen_month_matrix.py  hf_setup.py  smoke_pipeline.py  synth_train_verify.py
site/: index.html
site/space/: README.md  app.py
src/mtnwx/: __init__.py  cli.py  config.py  export_forcings.py  predict.py  report.py  run_verify.py  train.py  verify.py
src/mtnwx/data/: __init__.py  collect_obs.py  hrrr.py  hub_io.py  nbm.py  obs.py  stations.py  terrain.py
src/mtnwx/features/: __init__.py  build.py
tests/: test_config.py  test_features_verify.py  test_obs_qc.py  test_predict_json.py
