[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtnwx"
version = "0.1.0"
description = "Mountain weather ML post-processor — beats HRRR/NBM in complex terrain"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tree60weather" }]

# Core deps are kept light so CI matrix jobs (extraction) install fast.
# Training-only and site-only extras are separated below.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
    "xarray>=2024.1",
    "zarr>=2.16,<3",
    "fsspec>=2024.2",
    "aiohttp>=3.9",
    "requests>=2.31",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "huggingface-hub>=0.24",
]
terrain = [
    "rasterio>=1.3",
    "rioxarray>=0.15",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mtnwx = "mtnwx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
